nginx variable so it starts up without grafana, add healthcheck, auto restart to swag

--- a/ops/nginx.conf
+++ b/ops/nginx.conf
@@ -24,39 +24,41 @@ server {
 
   server_name _;
   
-  location / {
-    proxy_pass http://shop:8080;
+  # location / {
+  #   proxy_pass http://shop:8080;
 
-    proxy_buffer_size          128k;
-    proxy_buffers              4 256k;
-    proxy_busy_buffers_size    256k;
-    proxy_connect_timeout       600;
-    proxy_send_timeout          600;
-    proxy_read_timeout          600;
-    send_timeout                600;
+  #   proxy_buffer_size          128k;
+  #   proxy_buffers              4 256k;
+  #   proxy_busy_buffers_size    256k;
+  #   proxy_connect_timeout       600;
+  #   proxy_send_timeout          600;
+  #   proxy_read_timeout          600;
+  #   send_timeout                600;
 
-    # websockets
-    proxy_http_version 1.1;
-    proxy_set_header    Origin http://shop:8080;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection "Upgrade";
-    proxy_set_header Host $host;
-  }
+  #   # websockets
+  #   proxy_http_version 1.1;
+  #   proxy_set_header    Origin http://shop:8080;
+  #   proxy_set_header Upgrade $http_upgrade;
+  #   proxy_set_header Connection "Upgrade";
+  #   proxy_set_header Host $host;
+  # }
 
-  location /gateway {
-    proxy_pass http://gateway:8080;
-    proxy_buffer_size          128k;
-    proxy_buffers              4 256k;
-    proxy_busy_buffers_size    256k;
-    proxy_connect_timeout       600;
-    proxy_send_timeout          600;
-    proxy_read_timeout          600;
-    send_timeout                600;
-  }
+  # location /gateway {
+  #   proxy_pass http://gateway:8080;
+  #   proxy_buffer_size          128k;
+  #   proxy_buffers              4 256k;
+  #   proxy_busy_buffers_size    256k;
+  #   proxy_connect_timeout       600;
+  #   proxy_send_timeout          600;
+  #   proxy_read_timeout          600;
+  #   send_timeout                600;
+  # }
   
 
   location /grafana {
-    proxy_pass http://grafana:3000;
+    set $upstream grafana:3000;
+
+    proxy_pass http://$upstream;
 
     proxy_buffer_size          128k;
     proxy_buffers              4 256k;
