--- a/ops/dev/nginx.conf
+++ b/ops/dev/nginx.conf
@@ -56,7 +56,9 @@ server {
   
 
   location /grafana {
-    proxy_pass http://grafana:3000;
+    set $upstream grafana:3000;
+
+    proxy_pass http://$upstream; # using a variable makes it so nginx still starts if the service is down
 
     proxy_buffer_size          128k;
     proxy_buffers              4 256k;
