--- a/ops/dev/nginx.conf
+++ b/ops/dev/nginx.conf
@@ -43,22 +43,21 @@ server {
   #   proxy_set_header Host $host;
   # }
 
-  # location /gateway {
-  #   proxy_pass http://gateway:8080;
-  #   proxy_buffer_size          128k;
-  #   proxy_buffers              4 256k;
-  #   proxy_busy_buffers_size    256k;
-  #   proxy_connect_timeout       600;
-  #   proxy_send_timeout          600;
-  #   proxy_read_timeout          600;
-  #   send_timeout                600;
-  # }
+  location /gateway {
+    proxy_pass http://storage-api:8080; 
+
+    proxy_buffer_size          128k;
+    proxy_buffers              4 256k;
+    proxy_busy_buffers_size    256k;
+    proxy_connect_timeout       600;
+    proxy_send_timeout          600;
+    proxy_read_timeout          600;
+    send_timeout                600;
+  }
   
 
   location /grafana {
-    set $upstream grafana:3000;
-
-    proxy_pass http://$upstream; # using a variable makes it so nginx still starts if the service is down
+    proxy_pass http://grafana:3000; 
 
     proxy_buffer_size          128k;
     proxy_buffers              4 256k;
