--- a/ops/dev/nginx.conf
+++ b/ops/dev/nginx.conf
@@ -24,24 +24,43 @@ server {
 
   server_name _;
   
-  # location / {
-  #   proxy_pass http://shop:8080;
+  location / {
+    proxy_pass http://asteroids-client:8080;
 
-  #   proxy_buffer_size          128k;
-  #   proxy_buffers              4 256k;
-  #   proxy_busy_buffers_size    256k;
-  #   proxy_connect_timeout       600;
-  #   proxy_send_timeout          600;
-  #   proxy_read_timeout          600;
-  #   send_timeout                600;
+    proxy_buffer_size          128k;
+    proxy_buffers              4 256k;
+    proxy_busy_buffers_size    256k;
+    proxy_connect_timeout       600;
+    proxy_send_timeout          600;
+    proxy_read_timeout          600;
+    send_timeout                600;
 
-  #   # websockets
-  #   proxy_http_version 1.1;
-  #   proxy_set_header    Origin http://shop:8080;
-  #   proxy_set_header Upgrade $http_upgrade;
-  #   proxy_set_header Connection "Upgrade";
-  #   proxy_set_header Host $host;
-  # }
+    # websockets
+    proxy_http_version 1.1;
+    proxy_set_header    Origin http://asteroids-client:8080;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "Upgrade";
+    proxy_set_header Host $host;
+  }
+
+  location /messagehub {
+    proxy_pass http://asteroids-system:8080;
+
+    proxy_buffer_size          128k;
+    proxy_buffers              4 256k;
+    proxy_busy_buffers_size    256k;
+    proxy_connect_timeout       600;
+    proxy_send_timeout          600;
+    proxy_read_timeout          600;
+    send_timeout                600;
+
+    # websockets
+    proxy_http_version 1.1;
+    proxy_set_header    Origin http://asteroids-system:8080;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "Upgrade";
+    proxy_set_header Host $host;
+  }
 
   location /gateway {
     proxy_pass http://storage-api:8080; 
