get basic observability working for client and actor system

--- a/src/Asteroids/Asteroids.AsteroidSystem/Asteroids.AsteroidSystem.csproj
+++ b/src/Asteroids/Asteroids.AsteroidSystem/Asteroids.AsteroidSystem.csproj
@@ -9,7 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="Akka.Bootstrap.Docker" Version="0.5.3" />
     <PackageReference Include="Akka.Cluster" Version="1.5.18" />
     <PackageReference Include="Akka.DependencyInjection" Version="1.5.18" />
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Shared\Shared.Observability\Shared.Observability.csproj" />
     <ProjectReference Include="..\Asteroids.Actors\Asteroids.Shared.csproj" />
   </ItemGroup>
 
