--- a/compose.yaml
+++ b/compose.yaml
@@ -32,6 +32,7 @@ services:
       ASPNETCORE_ENVIRONMENT: Development
       ASPNETCORE_URLS: http://+:8080
       ObservabilityOptions__CollectorUrl: http://collector:4317
+      ObservabilityOptions__ServiceName: asteroids-system
       TZ: America/Denver
     <<: *dotnet_sync
 
@@ -45,5 +46,6 @@ services:
       ASPNETCORE_ENVIRONMENT: Development
       ASPNETCORE_URLS: http://+:8080
       ObservabilityOptions__CollectorUrl: http://collector:4317
+      ObservabilityOptions__ServiceName: asteroids-client
       TZ: America/Denver
     <<: *dotnet_sync
