--- a/src/Asteroids/Asteroids.AsteroidSystem/appsettings.json
+++ b/src/Asteroids/Asteroids.AsteroidSystem/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ObservabilityOptions": {
+    "ServiceName": "asteroids-system",
+    "CollectorUrl": "http://localhost:4317",
+  },
+  "ApiOptions": {
+  }
 }
