--- a/src/Asteroids/Asteroids.Client/Asteroids.Client.csproj
+++ b/src/Asteroids/Asteroids.Client/Asteroids.Client.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Shared\Shared.Observability\Shared.Observability.csproj" />
     <ProjectReference Include="..\Asteroids.Actors\Asteroids.Shared.csproj" />
   </ItemGroup>
 
