--- a/src/Asteroids/Asteroids.Client/appsettings.json
+++ b/src/Asteroids/Asteroids.Client/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ObservabilityOptions": {
+    "ServiceName": "asteroids-client",
+    "CollectorUrl": "http://localhost:4317"
+  },
+  "ApiOptions": {}
 }
