--- a/ops/nginx.conf
+++ b/ops/nginx.conf
@@ -43,18 +43,18 @@ server {
   #   proxy_set_header Host $host;
   # }
 
-  # location /gateway {
+  location /gateway {
     
 
-  #   proxy_pass http://gateway:8080;
-  #   proxy_buffer_size          128k;
-  #   proxy_buffers              4 256k;
-  #   proxy_busy_buffers_size    256k;
-  #   proxy_connect_timeout       600;
-  #   proxy_send_timeout          600;
-  #   proxy_read_timeout          600;
-  #   send_timeout                600;
-  # }
+    proxy_pass http://w-raft-gateway:8080;
+    proxy_buffer_size          128k;
+    proxy_buffers              4 256k;
+    proxy_busy_buffers_size    256k;
+    proxy_connect_timeout       600;
+    proxy_send_timeout          600;
+    proxy_read_timeout          600;
+    send_timeout                600;
+  }
   
 
   location /grafana {
