--- a/ops/prod/compose.yml
+++ b/ops/prod/compose.yml
@@ -31,10 +31,30 @@ services:
       timeout: 20s
       retries: 3
       start_period: 30s
-    profiles:
-      - manager
-    networks:
-      - w-overlay
+
+  asteroids-system:
+    container_name: asteroids-system
+    build:
+      context: ./src/
+      dockerfile: ./Asteroids/Asteroids.AsteroidSystem/Dockerfile
+      target: final
+    environment:
+      ASPNETCORE_URLS: http://+:8080
+      ObservabilityOptions__CollectorUrl: http://collector:4317
+      ObservabilityOptions__ServiceName: asteroids-system
+      TZ: America/Denver
+
+  asteroids-client:
+    container_name: asteroids-client
+    build:
+      context: ./src/
+      dockerfile: ./Asteroids/Asteroids.Client/Dockerfile
+      target: final
+    environment:
+      ASPNETCORE_URLS: http://+:8080
+      ObservabilityOptions__CollectorUrl: http://collector:4317
+      ObservabilityOptions__ServiceName: asteroids-client
+      TZ: America/Denver
 
   # https://medium.com/@saklani1408/configuring-healthcheck-in-docker-compose-3fa6439ee280
   autoheal:
@@ -47,13 +67,3 @@ services:
       - AUTOHEAL_DEFAULT_STOP_TIMEOUT=10
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-
-networks:
-  w-overlay:
-    name: w-overlay
-    driver: overlay
-    attachable: true
-  w-overlay-worker:
-    name: w-overlay
-    driver: overlay
-    external: true
