--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -5,7 +5,7 @@ RUN dotnet tool install --global --no-cache dotnet-subset --version 0.3.2
 FROM base as restore
 WORKDIR /src
 COPY . .
-RUN dotnet subset restore Raft.sln --root-directory /src --output /src/restored
+RUN dotnet subset restore src.sln --root-directory /src --output /src/restored
 
 FROM mcr.microsoft.com/dotnet/sdk:8.0-alpine AS development
 COPY --from=restore /src/restored .
