--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
 
   tests:
     needs: format
-    uses: ./.github/workflows/test.yml
+    uses: ./.github/workflows/tests.yml
 
   deploy-application:
     needs: tests
@@ -38,7 +38,7 @@ jobs:
   #   steps:
   #     - name: run container to ensure network
   #       run: |
-  #         docker run -d --rm --name w-network-opener --network w-overlay alpine sleep 30 
+  #         docker run -d --rm --name w-network-opener --network w-overlay alpine sleep 30
 
   # deploy-other-node:
   #   needs: ensure-network
