--- a/ops/prod/compose.yml
+++ b/ops/prod/compose.yml
@@ -3,7 +3,7 @@ include:
 
 services:
   swag:
-    container_name: w-swag
+    container_name: w-asteroids-swag
     image: lscr.io/linuxserver/swag
     cap_add:
       - NET_ADMIN
@@ -31,7 +31,7 @@ services:
       start_period: 30s
 
   asteroids-system:
-    container_name: asteroids-system
+    container_name: w-asteroids-system
     build:
       context: ./src/
       dockerfile: ./Asteroids/Asteroids.AsteroidSystem/Dockerfile
@@ -43,7 +43,7 @@ services:
       TZ: America/Denver
 
   asteroids-client:
-    container_name: asteroids-client
+    container_name: w-asteroids-client
     build:
       context: ./src/
       dockerfile: ./Asteroids/Asteroids.Client/Dockerfile
@@ -56,6 +56,7 @@ services:
 
   # https://medium.com/@saklani1408/configuring-healthcheck-in-docker-compose-3fa6439ee280
   autoheal:
+    container_name: w-autoheal
     image: willfarrell/autoheal:latest
     tty: true
     restart: always
@@ -65,3 +66,6 @@ services:
       - AUTOHEAL_DEFAULT_STOP_TIMEOUT=10
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+
+networks:
+  default: w-asteroids-network
