--- a/ops/prod/swag-default.conf
+++ b/ops/prod/swag-default.conf
@@ -14,7 +14,7 @@ server {
 
 server {
   proxy_set_header Host $host;
-  proxy_set_header X-Forwarded-Host raftshop.duckdns.org;
+  proxy_set_header X-Forwarded-Host disasteroids.duckdns.org;
   proxy_set_header X-Real-IP $remote_addr;
   proxy_set_header X-Forwarded-Proto https;
   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -26,8 +26,8 @@ server {
 
   include /config/nginx/ssl.conf;
   
-  location / {
-    proxy_pass http://shop:8080;
+location / {
+    proxy_pass http://asteroids-client:8080;
 
     proxy_buffer_size          128k;
     proxy_buffers              4 256k;
@@ -39,15 +39,34 @@ server {
 
     # websockets
     proxy_http_version 1.1;
-    proxy_set_header    Origin http://shop:8080;
+    proxy_set_header    Origin http://asteroids-client:8080;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "Upgrade";
     proxy_set_header Host $host;
   }
 
+  location /messagehub {
+    proxy_pass http://asteroids-system:8080;
 
-  location /api {
-    proxy_pass http://gateway:8080;
+    proxy_buffer_size          128k;
+    proxy_buffers              4 256k;
+    proxy_busy_buffers_size    256k;
+    proxy_connect_timeout       600;
+    proxy_send_timeout          600;
+    proxy_read_timeout          600;
+    send_timeout                600;
+
+    # websockets
+    proxy_http_version 1.1;
+    proxy_set_header    Origin http://asteroids-system:8080;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "Upgrade";
+    proxy_set_header Host $host;
+  }
+
+  location /gateway {
+    proxy_pass http://storage-api:8080; 
+
     proxy_buffer_size          128k;
     proxy_buffers              4 256k;
     proxy_busy_buffers_size    256k;
@@ -59,7 +78,7 @@ server {
   
 
   location /grafana {
-    proxy_pass http://grafana:3000;
+    proxy_pass http://grafana:3000; 
 
     proxy_buffer_size          128k;
     proxy_buffers              4 256k;
@@ -68,6 +87,12 @@ server {
     proxy_send_timeout          600;
     proxy_read_timeout          600;
     send_timeout                600;
+    # websockets
+    proxy_http_version 1.1;
+    proxy_set_header    Origin http://localhost:3001;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "Upgrade";
+    proxy_set_header Host $host;
   }
 
 }
