Update service name from 'gateway' to 'storage-api' and fix proxy_pass in swag-default.conf

--- a/ops/prod/compose.raft.yml
+++ b/ops/prod/compose.raft.yml
@@ -15,7 +15,7 @@ x-node-environment: &node-environment
   TZ: America/Denver
 
 services:
-  gateway:
+  storage-api:
     container_name: w-raft-gateway
     build:
       context: ../../src/Raft/
