--- a/ops/prod/swag-default.conf
+++ b/ops/prod/swag-default.conf
@@ -65,7 +65,8 @@ location / {
   }
 
   location /gateway {
-    proxy_pass http://storage-api:8080; 
+    set $upstream_gateway storage-api:8080;
+    proxy_pass http://upstream_gateway; 
 
     proxy_buffer_size          128k;
     proxy_buffers              4 256k;
