Update upstream gateway variable in swag-default.conf

--- a/ops/prod/swag-default.conf
+++ b/ops/prod/swag-default.conf
@@ -65,8 +65,8 @@ location / {
   }
 
   location /gateway {
-    set $upstream_gateway storage-api:8080;
-    proxy_pass http://upstream_gateway; 
+    set $upstream "storage-api:8080";
+    proxy_pass http://upstream; 
 
     proxy_buffer_size          128k;
     proxy_buffers              4 256k;
