Fix proxy_pass variable in swag-default.conf

--- a/ops/prod/swag-default.conf
+++ b/ops/prod/swag-default.conf
@@ -66,7 +66,7 @@ location / {
 
   location /gateway {
     set $upstream "storage-api:8080";
-    proxy_pass http://upstream; 
+    proxy_pass http://$upstream; 
 
     proxy_buffer_size          128k;
     proxy_buffers              4 256k;
