--- a/ops/prod/swag-default.conf
+++ b/ops/prod/swag-default.conf
@@ -79,7 +79,8 @@ location / {
   
 
   location /grafana {
-    proxy_pass http://grafana:3000; 
+    set $upstream "grafana:3000";
+    proxy_pass http://$upstream; 
 
     proxy_buffer_size          128k;
     proxy_buffers              4 256k;
