--- a/ops/prod/swag-default.conf
+++ b/ops/prod/swag-default.conf
@@ -27,7 +27,8 @@ server {
   include /config/nginx/ssl.conf;
   
 location / {
-    proxy_pass http://asteroids-client:8080;
+    set $upstream "asteroids-client:8080";
+    proxy_pass http://$upstream;
 
     proxy_buffer_size          128k;
     proxy_buffers              4 256k;
@@ -46,7 +47,8 @@ location / {
   }
 
   location /messagehub {
-    proxy_pass http://asteroids-system:8080;
+    set $upstream "asteroids-system:8080";
+    proxy_pass http://$upstream;
 
     proxy_buffer_size          128k;
     proxy_buffers              4 256k;
