--- a/ops/dev/nginx.conf
+++ b/ops/dev/nginx.conf
@@ -62,6 +62,25 @@ server {
     proxy_set_header Host $host;
   }
 
+  location /hubs {
+    proxy_pass http://asteroids-system:8080;
+
+    proxy_buffer_size          128k;
+    proxy_buffers              4 256k;
+    proxy_busy_buffers_size    256k;
+    proxy_connect_timeout       600;
+    proxy_send_timeout          600;
+    proxy_read_timeout          600;
+    send_timeout                600;
+
+    # websockets
+    proxy_http_version 1.1;
+    proxy_set_header    Origin http://asteroids-system:8080;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "Upgrade";
+    proxy_set_header Host $host;
+  }
+
   location /gateway {
     proxy_pass http://storage-api:8080; 
 
