--- a/src/Asteroids/Asteroids.Actors/Asteroids.Shared.csproj
+++ b/src/Asteroids/Asteroids.Actors/Asteroids.Shared.csproj
@@ -11,6 +11,7 @@
 		<PackageReference Include="Akka.Cluster" Version="1.5.18" />
 		<PackageReference Include="Akka.DependencyInjection" Version="1.5.18" />
 		<PackageReference Include="Akka.HealthCheck.Cluster" Version="1.5.18" />
+		<PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0" />
 		<PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="8.0.3" />
 	</ItemGroup>
 
