--- a/src/Asteroids/Asteroids.Actors/Asteroids.Shared.csproj
+++ b/src/Asteroids/Asteroids.Actors/Asteroids.Shared.csproj
@@ -17,4 +17,8 @@
 		<PackageReference Include="Microsoft.AspNetCore.SignalR.Client.SourceGenerator" Version="7.0.0-preview.7.22376.6" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Services\" />
+	</ItemGroup>
+
 </Project>
