--- a/src/Asteroids/Asteroids.Actors/Asteroids.Shared.csproj
+++ b/src/Asteroids/Asteroids.Actors/Asteroids.Shared.csproj
@@ -11,11 +11,14 @@
 		<PackageReference Include="Akka.Cluster" Version="1.5.18" />
 		<PackageReference Include="Akka.DependencyInjection" Version="1.5.18" />
 		<PackageReference Include="Akka.HealthCheck.Cluster" Version="1.5.18" />
+		<PackageReference Include="Akka.Hosting" Version="1.5.18" />
+		<PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0" />
 		<PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="8.0.3" />
+		<PackageReference Include="Microsoft.AspNetCore.SignalR.Client.SourceGenerator" Version="7.0.0-preview.7.22376.6" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="MessagingContracts\" />
+	  <Folder Include="Services\" />
 	</ItemGroup>
 
 </Project>
