proof of concept tracing for login

--- a/src/Asteroids/Asteroids.Actors/Asteroids.Shared.csproj
+++ b/src/Asteroids/Asteroids.Actors/Asteroids.Shared.csproj
@@ -21,4 +21,8 @@
 	  <Folder Include="Services\" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\..\Shared\Shared.Observability\Shared.Observability.csproj" />
+	</ItemGroup>
+
 </Project>
