--- a/src/Asteroids/Asteroids.Client/appsettings.json
+++ b/src/Asteroids/Asteroids.Client/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "ObservabilityOptions": {
     "ServiceName": "asteroids-client",
-    "CollectorUrl": "http://localhost:4317"
+    "CollectorUrl": "http://localhost:4317",
   },
   "ApiOptions": {}
 }
