Redundant autoredirecting clients

--- a/ops/dev/nginx.conf
+++ b/ops/dev/nginx.conf
@@ -5,11 +5,11 @@ proxy_cache_key "$scheme$request_method$host$request_uri";
 
 client_max_body_size 500M;
 
-# upstream image_api {
-#   server imageprocessing1:8080;
-#   server imageprocessing2:8080;
-#   server imageprocessing3:8080;
-# }
+upstream asteroids-client {
+  hash $remote_addr consistent; 
+  server asteroids-client1:8080;
+  server asteroids-client2:8080;
+}
 
 server {
 
@@ -25,12 +25,13 @@ server {
   server_name _;
   
   location / {
-    proxy_pass http://asteroids-client:8080;
+    proxy_pass http://asteroids-client;
+    proxy_next_upstream     error timeout invalid_header http_500;
+    proxy_connect_timeout   2;
 
     proxy_buffer_size          128k;
     proxy_buffers              4 256k;
     proxy_busy_buffers_size    256k;
-    proxy_connect_timeout       600;
     proxy_send_timeout          600;
     proxy_read_timeout          600;
     send_timeout                600;
