--- a/compose.yaml
+++ b/compose.yaml
@@ -9,10 +9,21 @@ x-dotnet_sync: &dotnet_sync
         path: ./src/Asteroids/
         target: ./src/Asteroids/
 
+x-client_config: &client_config
+  build:
+    context: ./src/
+    dockerfile: ./Asteroids/Asteroids.Client/Dockerfile
+    target: development
+  environment:
+    ASPNETCORE_ENVIRONMENT: Development
+    ASPNETCORE_URLS: http://+:8080
+    ObservabilityOptions__CollectorUrl: http://collector:4317
+    ObservabilityOptions__ServiceName: asteroids-client
+    TZ: America/Denver
+  <<: *dotnet_sync
+
 services:
   nginx:
-    depends_on:
-      - asteroids-client
     build:
       context: ./ops/dev/
       dockerfile: nginx.Dockerfile
@@ -23,6 +34,18 @@ services:
         - action: sync+restart
           path: ./ops/dev/nginx.conf
           target: /etc/nginx/conf.d/default.conf
+
+  lighthouse:
+    image: petabridge/lighthouse:latest
+    hostname: lighthouse
+    ports:
+      - "9110:9110"
+      - "4053:4053"
+    environment:
+      ACTORSYSTEM: "MyAsteroidSystem"
+      CLUSTER_PORT: 4053
+      CLUSTER_IP: "lighthouse"
+      CLUSTER_SEEDS: "akka.tcp://MyAsteroidSystem@lighthouse:4053"
 
   asteroids-system:
     container_name: asteroids-system
@@ -35,19 +58,31 @@ services:
       ASPNETCORE_URLS: http://+:8080
       ObservabilityOptions__CollectorUrl: http://collector:4317
       ObservabilityOptions__ServiceName: asteroids-system
+      ApiOptions__AkkaRoles: System
+      ApiOptions__AkkaSeeds: "akka.tcp://MyAsteroidSystem@lighthouse:4053"
       TZ: America/Denver
     <<: *dotnet_sync
 
-  asteroids-client:
-    container_name: asteroids-client
-    build:
-      context: ./src/
-      dockerfile: ./Asteroids/Asteroids.Client/Dockerfile
-      target: development
-    environment:
-      ASPNETCORE_ENVIRONMENT: Development
-      ASPNETCORE_URLS: http://+:8080
-      ObservabilityOptions__CollectorUrl: http://collector:4317
-      ObservabilityOptions__ServiceName: asteroids-client
-      TZ: America/Denver
-    <<: *dotnet_sync
+  # asteroids-node1:
+  #   container_name: asteroids-node1
+  #   build:
+  #     context: ./src/
+  #     dockerfile: ./Asteroids/Asteroids.AsteroidSystem/Dockerfile
+  #     target: development
+  #   environment:
+  #     ASPNETCORE_ENVIRONMENT: Development
+  #     ASPNETCORE_URLS: http://+:8080
+  #     ObservabilityOptions__CollectorUrl: http://collector:4317
+  #     ObservabilityOptions__ServiceName: asteroids-system
+  #     ApiOptions__AkkaRoles: Accounts
+  #     ApiOptions__AkkaSeeds: "akka.tcp://MyAsteroidSystem@lighthouse:4053"
+  #     TZ: America/Denver
+  #   <<: *dotnet_sync
+
+  asteroids-client1:
+    container_name: asteroids-client-1
+    <<: *client_config
+
+  asteroids-client2:
+    container_name: asteroids-client-2
+    <<: *client_config
