--- a/ops/prod/swag-default.conf
+++ b/ops/prod/swag-default.conf
@@ -1,5 +1,11 @@
 error_page 502 /502.html;
 
+upstream asteroids-client {
+  hash $remote_addr consistent; 
+  server asteroids-client1:8080;
+  server asteroids-client2:8080;
+}
+
 server {
 
     listen 80 default_server;
@@ -27,20 +33,19 @@ server {
   include /config/nginx/ssl.conf;
   
 location / {
-    set $upstream "asteroids-client:8080";
-    proxy_pass http://$upstream;
-
+    proxy_pass http://asteroids-client;
+    proxy_next_upstream     error timeout invalid_header http_500;
+    proxy_connect_timeout   2;
     proxy_buffer_size          128k;
     proxy_buffers              4 256k;
     proxy_busy_buffers_size    256k;
-    proxy_connect_timeout       600;
     proxy_send_timeout          600;
     proxy_read_timeout          600;
     send_timeout                600;
 
     # websockets
     proxy_http_version 1.1;
-    proxy_set_header    Origin http://asteroids-client:8080;
+    proxy_set_header    Origin http://asteroids-client;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "Upgrade";
     proxy_set_header Host $host;
