--- a/ops/prod/compose.yml
+++ b/ops/prod/compose.yml
@@ -41,6 +41,16 @@ services:
       retries: 3
       start_period: 30s
 
+  lighthouse:
+    image: petabridge/lighthouse:latest
+    container_name: w-lighthouse
+    hostname: lighthouse
+    environment:
+      ACTORSYSTEM: "MyAsteroidSystem"
+      CLUSTER_PORT: 4053
+      CLUSTER_IP: "lighthouse"
+      CLUSTER_SEEDS: "akka.tcp://MyAsteroidSystem@lighthouse:4053"
+
   asteroids-system:
     container_name: w-asteroids-system
     build:
@@ -51,6 +61,8 @@ services:
       ASPNETCORE_URLS: http://+:8080
       ObservabilityOptions__CollectorUrl: http://collector:4317
       ObservabilityOptions__ServiceName: asteroids-system
+      ApiOptions__AkkaRoles: System
+      ApiOptions__AkkaSeeds: "akka.tcp://MyAsteroidSystem@lighthouse:4053"
       TZ: America/Denver
 
   asteroids-client1:
