--- a/compose.yaml
+++ b/compose.yaml
@@ -58,26 +58,26 @@ services:
       ASPNETCORE_URLS: http://+:8080
       ObservabilityOptions__CollectorUrl: http://collector:4317
       ObservabilityOptions__ServiceName: asteroids-system
-      ApiOptions__AkkaRoles: System
+      ApiOptions__AkkaRoles: SignalR
       ApiOptions__AkkaSeeds: "akka.tcp://MyAsteroidSystem@lighthouse:4053"
       TZ: America/Denver
     <<: *dotnet_sync
 
-  # asteroids-node1:
-  #   container_name: asteroids-node1
-  #   build:
-  #     context: ./src/
-  #     dockerfile: ./Asteroids/Asteroids.AsteroidSystem/Dockerfile
-  #     target: development
-  #   environment:
-  #     ASPNETCORE_ENVIRONMENT: Development
-  #     ASPNETCORE_URLS: http://+:8080
-  #     ObservabilityOptions__CollectorUrl: http://collector:4317
-  #     ObservabilityOptions__ServiceName: asteroids-system
-  #     ApiOptions__AkkaRoles: Accounts
-  #     ApiOptions__AkkaSeeds: "akka.tcp://MyAsteroidSystem@lighthouse:4053"
-  #     TZ: America/Denver
-  #   <<: *dotnet_sync
+  asteroids-node1:
+     container_name: asteroids-node1
+     build:
+       context: ./src/
+       dockerfile: ./Asteroids/Asteroids.AsteroidSystem/Dockerfile
+       target: development
+     environment:
+       ASPNETCORE_ENVIRONMENT: Development
+       ASPNETCORE_URLS: http://+:8080
+       ObservabilityOptions__CollectorUrl: http://collector:4317
+       ObservabilityOptions__ServiceName: asteroids-system
+       ApiOptions__AkkaRoles: Lobbies
+       ApiOptions__AkkaSeeds: "akka.tcp://MyAsteroidSystem@lighthouse:4053"
+       TZ: America/Denver
+     <<: *dotnet_sync
 
   asteroids-client1:
     container_name: asteroids-client-1
