--- a/compose.yaml
+++ b/compose.yaml
@@ -22,6 +22,21 @@ x-client_config: &client_config
     TZ: America/Denver
   <<: *dotnet_sync
 
+x-asteroids_system_base: &asteroids_system_base
+  build:
+    context: ./src/
+    dockerfile: ./Asteroids/Asteroids.AsteroidSystem/Dockerfile
+    target: development
+  <<: *dotnet_sync
+
+x-asteroids_system_env: &asteroids_system_env
+  ASPNETCORE_ENVIRONMENT: Development
+  ASPNETCORE_URLS: http://+:8080
+  ObservabilityOptions__CollectorUrl: http://collector:4317
+  ObservabilityOptions__ServiceName: asteroids-system
+  ApiOptions__AkkaSeeds: "akka.tcp://MyAsteroidSystem@lighthouse:4053"
+  TZ: America/Denver
+
 services:
   nginx:
     build:
@@ -49,35 +64,27 @@ services:
 
   asteroids-system:
     container_name: asteroids-system
-    build:
-      context: ./src/
-      dockerfile: ./Asteroids/Asteroids.AsteroidSystem/Dockerfile
-      target: development
+    <<: *asteroids_system_base
     environment:
-      ASPNETCORE_ENVIRONMENT: Development
-      ASPNETCORE_URLS: http://+:8080
-      ObservabilityOptions__CollectorUrl: http://collector:4317
-      ObservabilityOptions__ServiceName: asteroids-system
-      ApiOptions__AkkaRoles: System
-      ApiOptions__AkkaSeeds: "akka.tcp://MyAsteroidSystem@lighthouse:4053"
-      TZ: America/Denver
-    <<: *dotnet_sync
+      <<: *asteroids_system_env
+      ApiOptions__AkkaRoles: SignalR # comma separated list of roles
+      ApiOptions__AkkaHostname: asteroids-system
 
-  # asteroids-node1:
-  #   container_name: asteroids-node1
-  #   build:
-  #     context: ./src/
-  #     dockerfile: ./Asteroids/Asteroids.AsteroidSystem/Dockerfile
-  #     target: development
-  #   environment:
-  #     ASPNETCORE_ENVIRONMENT: Development
-  #     ASPNETCORE_URLS: http://+:8080
-  #     ObservabilityOptions__CollectorUrl: http://collector:4317
-  #     ObservabilityOptions__ServiceName: asteroids-system
-  #     ApiOptions__AkkaRoles: Accounts
-  #     ApiOptions__AkkaSeeds: "akka.tcp://MyAsteroidSystem@lighthouse:4053"
-  #     TZ: America/Denver
-  #   <<: *dotnet_sync
+  asteroids-node1:
+    container_name: asteroids-node1
+    <<: *asteroids_system_base
+    environment:
+      <<: *asteroids_system_env
+      ApiOptions__AkkaRoles: Lobbies # comma separated list of roles
+      ApiOptions__AkkaHostname: asteroids-node1
+
+  asteroids-node2:
+    container_name: asteroids-node2
+    <<: *asteroids_system_base
+    environment:
+      <<: *asteroids_system_env
+      ApiOptions__AkkaRoles: Lobbies # comma separated list of roles
+      ApiOptions__AkkaHostname: asteroids-node2
 
   asteroids-client1:
     container_name: asteroids-client-1
