--- a/compose.yaml
+++ b/compose.yaml
@@ -35,6 +35,7 @@ x-asteroids_system_env: &asteroids_system_env
   ObservabilityOptions__CollectorUrl: http://collector:4317
   ObservabilityOptions__ServiceName: asteroids-system
   ApiOptions__AkkaSeeds: "akka.tcp://MyAsteroidSystem@lighthouse:4053"
+  ApiOptions__RaftStorageUrl: "http://storage-api:8080/gateway"
   TZ: America/Denver
 
 services:
@@ -61,6 +62,7 @@ services:
       CLUSTER_PORT: 4053
       CLUSTER_IP: "lighthouse"
       CLUSTER_SEEDS: "akka.tcp://MyAsteroidSystem@lighthouse:4053"
+    restart: unless-stopped
 
   asteroids-system:
     container_name: asteroids-system
@@ -78,13 +80,13 @@ services:
       ApiOptions__AkkaRoles: Lobbies # comma separated list of roles
       ApiOptions__AkkaHostname: asteroids-node1
 
-  asteroids-node2:
-    container_name: asteroids-node2
-    <<: *asteroids_system_base
-    environment:
-      <<: *asteroids_system_env
-      ApiOptions__AkkaRoles: Lobbies # comma separated list of roles
-      ApiOptions__AkkaHostname: asteroids-node2
+  # asteroids-node2:
+  #   container_name: asteroids-node2
+  #   <<: *asteroids_system_base
+  #   environment:
+  #     <<: *asteroids_system_env
+  #     ApiOptions__AkkaRoles: Lobbies # comma separated list of roles
+  #     ApiOptions__AkkaHostname: asteroids-node2
 
   asteroids-client1:
     container_name: asteroids-client-1
