--- a/src/compose.raft.yaml
+++ b/src/compose.raft.yaml
@@ -36,6 +36,8 @@ services:
       ASPNETCORE_URLS: http://+:8080
       ObservabilityOptions__CollectorUrl: http://collector:4317
       TZ: America/Denver
+    ports:
+      - 8080:8080
     <<: *dotnet_sync
 
   node1:
