--- a/compose.yaml
+++ b/compose.yaml
@@ -18,7 +18,7 @@ x-client_config: &client_config
     ASPNETCORE_ENVIRONMENT: Development
     ASPNETCORE_URLS: http://+:8080
     ObservabilityOptions__CollectorUrl: http://collector:4317
-    ObservabilityOptions__ServiceName: asteroids-client
+    ObservabilityOptions__ServiceName: asteroids-system
     TZ: America/Denver
   <<: *dotnet_sync
 
