--- a/compose.yaml
+++ b/compose.yaml
@@ -18,7 +18,7 @@ x-client_config: &client_config
     ASPNETCORE_ENVIRONMENT: Development
     ASPNETCORE_URLS: http://+:8080
     ObservabilityOptions__CollectorUrl: http://collector:4317
-    ObservabilityOptions__ServiceName: asteroids-system
+    ObservabilityOptions__ServiceName: asteroids
     TZ: America/Denver
   <<: *dotnet_sync
 
@@ -33,7 +33,7 @@ x-asteroids_system_env: &asteroids_system_env
   ASPNETCORE_ENVIRONMENT: Development
   ASPNETCORE_URLS: http://+:8080
   ObservabilityOptions__CollectorUrl: http://collector:4317
-  ObservabilityOptions__ServiceName: asteroids-system
+  ObservabilityOptions__ServiceName: asteroids
   ApiOptions__AkkaSeeds: "akka.tcp://MyAsteroidSystem@lighthouse:4053"
   ApiOptions__RaftStorageUrl: "http://storage-api:8080/gateway"
   TZ: America/Denver
