--- a/ops/prod/compose.yml
+++ b/ops/prod/compose.yml
@@ -24,6 +24,7 @@ x-asteroids_system_env: &asteroids_system_env
   ObservabilityOptions__CollectorUrl: http://collector:4317
   ObservabilityOptions__ServiceName: asteroids
   ApiOptions__AkkaSeeds: "akka.tcp://MyAsteroidSystem@lighthouse:4053"
+  ApiOptions__RaftStorageUrl: "http://storage-api:8080/gateway"
   TZ: America/Denver
 
 services:
